--- a/arch/arm64/configs/hisi_6250_defconfig
+++ b/arch/arm64/configs/hisi_6250_defconfig
@@ -2789,7 +2789,8 @@ CONFIG_HI6250_USB=y
 #
 # USB port drivers
 #
-# CONFIG_USB_SERIAL is not set
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_CH341=y
 
 #
 # USB Miscellaneous drivers
