add HUAWEI_EMCOM drivers from EMUI 8 kernel

--- a/arch/arm64/configs/hisi_6250_defconfig
+++ b/arch/arm64/configs/hisi_6250_defconfig
@@ -3794,6 +3794,10 @@ CONFIG_ANTENNA_BOARDID_GPIO_DETECT=y
 # CONFIG_DRV2605 is not set
 CONFIG_HUAWEI_OCP=y
 CONFIG_MADAPT=y
+CONFIG_HUAWEI_EMCOM=y
+# CONFIG_TCP_ARGO is not set
+CONFIG_HUAWEI_XENGINE=y
+# CONFIG_HUAWEI_EMCOM_CHANNEL is not set
 CONFIG_LCD_ON_OFF_CHECK=y
 CONFIG_HUAWEI_DSM=y
 CONFIG_HUAWEI_DSM_AUDIO=y
