fix build HUAWEI_EMCOM drivers ... by adding the missing headers

--- a/arch/arm64/configs/hisi_6250_defconfig
+++ b/arch/arm64/configs/hisi_6250_defconfig
@@ -3798,6 +3798,7 @@ CONFIG_HUAWEI_EMCOM=y
 # CONFIG_TCP_ARGO is not set
 CONFIG_HUAWEI_XENGINE=y
 # CONFIG_HUAWEI_EMCOM_CHANNEL is not set
+# CONFIG_HW_NETWORK_MEASUREMENT is not set
 CONFIG_LCD_ON_OFF_CHECK=y
 CONFIG_HUAWEI_DSM=y
 CONFIG_HUAWEI_DSM_AUDIO=y
