--- a/arch/arm64/configs/hisi_6250_defconfig
+++ b/arch/arm64/configs/hisi_6250_defconfig
@@ -3190,6 +3190,8 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
+CONFIG_HUAWEI_RCC=y
+CONFIG_HISI_SMART_RECLAIM=y
 # CONFIG_SYNC_DEBUG is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
