--- a/arch/arm64/configs/hisi_6250_defconfig
+++ b/arch/arm64/configs/hisi_6250_defconfig
@@ -127,6 +127,7 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
+CONFIG_HW_CGROUP_PIDS=y
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
@@ -335,6 +336,9 @@ CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
 CONFIG_LOCK_SPIN_ON_OWNER=y
+CONFIG_HW_VIP_THREAD=y
+CONFIG_HW_NETWORK_AWARE=y
+# CONFIG_HW_IAWARE_THREAD_BOOST is not set
 CONFIG_FREEZER=y
 
 #
@@ -3860,6 +3864,7 @@ CONFIG_SYNAPTICS_TS_KIT=y
 # CONFIG_NOVATEK_TS_KIT is not set
 CONFIG_ILITEK_TS_KIT=y
 CONFIG_HUAWEI_TP_KIT_COLOR_INFO=y
+CONFIG_HW_CPULOAD_NOTI=y
 # CONFIG_HISI_SPMI is not set
 
 #
