--- a/arch/arm64/configs/hisi_6250_defconfig
+++ b/arch/arm64/configs/hisi_6250_defconfig
@@ -125,7 +125,7 @@ CONFIG_LOG_BUF_SHIFT=20
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 CONFIG_HW_CGROUP_PIDS=y
 # CONFIG_CGROUP_PIDS is not set
@@ -143,7 +143,7 @@ CONFIG_RT_GROUP_SCHED=y
 CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
-CONFIG_NAMESPACES=y
+# CONFIG_NAMESPACES is not set
 CONFIG_UTS_NS=y
 # CONFIG_USER_NS is not set
 CONFIG_PID_NS=y
